adds a dropdown menu

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
   </head>
   <body>
     <nav class='nav-bar'>
-      <ul class='nav-list'>
-        <li class='nav-item'><a class='nav-list-link'>Home</a></li>
-        <li class='nav-item'><a class='nav-list-link'>Blog</a></li>
+      <ul id='nav-list' class='nav-list'>
+        <li class='nav-item clicked'><a class='nav-list-link home'>Home</a></li>
+        <li class='nav-item clicked'><a class='nav-list-link'>Blog</a></li>
+        <li  class='icon clicked'><a id='icon' class='nav-list-link icon'>&#9776;</a></li>
       </ul>
     </nav>
 
@@ -32,5 +33,7 @@
       <h2>contact me<h2>
         <a href='https://uk.linkedin.com/in/john-whiles-362461100'>LinkedIn</a>
     </footer>
+
+  <script src='src/menu-button.js'></script>
   </body>
 </html>
