make menu open by default then hide using javascript

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   </head>
   <body>
-    <nav class='nav-bar'>
+    <nav class='nav-bar clicked'>
       <ul id='nav-list' class='nav-list'>
         <li class='nav-item clicked'><a class='nav-list-link home'>Home</a></li>
         <li class='nav-item clicked'><a class='nav-list-link'>Blog</a></li>
