modifies cenrtral grid, adds placeholder images

--- a/index.html
+++ b/index.html
@@ -16,22 +16,44 @@
         <li  class='icon clicked'><a id='icon' class='nav-list-link icon'>&#9776;</a></li>
       </ul>
     </nav>
-
+    <header>
     <h1>John Whiles</h1>
-
+    </header>
     <section class='about'>
       <h2>About</h2>
     </section>
     <section class='portfolio'>
       <h2>My Projects</h2>
-      <div class='col-6'><h3>Something</h3></div>
-      <div class='col-3'><h3>Something Else</h3></div>
-      <div class='col-3'><h3>Something Else</h3></div>
+      <div class='col-4'>
+        <h3>yo</h3>
+        <img class='portfolio-image' src='http://f4.bcbits.com/img/a2832880625_16.jpg'>
+
+      </a>
+      </div>
+      <div class='col-4'>
+        <h3>yo</h3>
+        <img class='portfolio-image' src='http://f4.bcbits.com/img/a2537487312_16.jpg'>
+
+      </div>
+      <div class='col-4'>
+        <h3>yo</h3>
+        <img class='portfolio-image' src='http://f4.bcbits.com/img/a2797711040_16.jpg'>
+
+      </div>
+
+      <div class='col-6'>
+        <h3>Something</h3>
+        <img class='portfolio-image' src='http://f4.bcbits.com/img/a2537487312_16.jpg'>
+      </div>
+      <div class='col-6'>
+        <h3>Something Else</h3>
+        <img class='portfolio-image' src='http://f4.bcbits.com/img/a2832880625_16.jpg'>
+      </div>
 
     </section>
     <footer class='foot'>
       <h2>contact me<h2>
-        <a href='https://uk.linkedin.com/in/john-whiles-362461100'>LinkedIn</a>
+        <a class='contact-link' href='https://uk.linkedin.com/in/john-whiles-362461100'>LinkedIn</a>
     </footer>
 
   <script src='src/menu-button.js'></script>
