--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>John Whiles</title>
-    <link rel='stylesheet' href='src/grid.css' type="text/css">
-    <link rel='stylesheet' href='src/main.css' type="text/css">
-    <link rel='stylesheet' href='src/home.css' type="text/css">
+    <link rel='stylesheet' href='src/css/grid.css' type="text/css">
+    <link rel='stylesheet' href='src/css/main.css' type="text/css">
+    <link rel='stylesheet' href='src/css/home.css' type="text/css">
 
   </head>
   <body>
@@ -56,6 +56,6 @@
         <a class='contact-link' href='https://uk.linkedin.com/in/john-whiles-362461100'>LinkedIn</a>
     </footer>
 
-  <script src='src/menu-button.js'></script>
+  <script src='src/js/menu-button.js'></script>
   </body>
 </html>
