--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <body>
     <nav class='nav-bar clicked'>
       <ul id='nav-list' class='nav-list'>
-        <li class='nav-item clicked'><a class='nav-list-link home'>Home</a></li>
-        <li class='nav-item clicked'><a class='nav-list-link'>Blog</a></li>
+        <li class='nav-item clicked'><a class='nav-list-link home' href='index.html'>Home</a></li>
+        <li class='nav-item clicked'><a class='nav-list-link' href='src/blog.html'>Blog</a></li>
         <li  class='icon clicked'><a id='icon' class='nav-list-link icon'>&#9776;</a></li>
       </ul>
     </nav>
