--- a/src/blog.html
+++ b/src/blog.html
@@ -21,17 +21,25 @@
     </header>
 
     <article class='blog-post'>
-      <h2>Blog Post</h2>
-      <p>chỉ đơn giản là một đoạn văn bản giả, được dùng vào việc trình bày và dàn trang phục vụ cho in ấn. Lorem Ipsum đã được sử dụng như một văn bản chuẩn cho ngành công nghiệp in ấn từ những năm 1500, khi một họa sĩ vô danh ghép nhiều đoạn văn bản với nhau để tạo thành một bản mẫu văn bản. Đoạn văn bản này không những đã tồn tại năm thế kỉ, mà khi được áp dụng vào tin học văn phòng, nội dung của nó vẫn không hề bị thay đổi. Nó đã được phổ biến trong những năm 1960 nhờ việc bán những bản giấy Letraset in những đoạn Lorem Ipsum, và gần đây hơn, được sử dụng trong các ứng dụng dàn trang, như Aldus PageMaker</p>
+      <h2 class='blog-post-title'>Blog Post</h2>
+      <p class='blog-post-content'>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas neque sapien, mattis at leo quis, tincidunt venenatis dui. Curabitur vitae finibus leo. Ut laoreet elit ante. Aliquam ut nisi id sapien porta rhoncus vitae rutrum augue. Fusce maximus pellentesque congue. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Maecenas lectus orci, bibendum vel faucibus id, interdum vel nulla. Nunc ac erat id magna porttitor vehicula. Aliquam congue, leo eget semper pretium, turpis tellus dapibus mauris, id euismod enim orci non massa. Vivamus consectetur iaculis elit vitae elementum. In at feugiat risus, a convallis lorem.
+      </p>
       <img class="blog-image" src='http://65.media.tumblr.com/4eb5a08d93db30e10b7ac041d6989749/tumblr_o7wm7qWR3W1sz1s2jo1_1280.jpg'>
-      <p>chỉ đơn giản là một đoạn văn bản giả, được dùng vào việc trình bày và dàn trang phục vụ cho in ấn. Lorem Ipsum đã được sử dụng như một văn bản chuẩn cho ngành công nghiệp in ấn từ những năm 1500, khi một họa sĩ vô danh ghép nhiều đoạn văn bản với nhau để tạo thành một bản mẫu văn bản. Đoạn văn bản này không những đã tồn tại năm thế kỉ, mà khi được áp dụng vào tin học văn phòng, nội dung của nó vẫn không hề bị thay đổi. Nó đã được phổ biến trong những năm 1960 nhờ việc bán những bản giấy Letraset in những đoạn Lorem Ipsum, và gần đây hơn, được sử dụng trong các ứng dụng dàn trang, như Aldus PageMaker</p>
+      <p class='blog-post-content'>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas neque sapien, mattis at leo quis, tincidunt venenatis dui. Curabitur vitae finibus leo. Ut laoreet elit ante. Aliquam ut nisi id sapien porta rhoncus vitae rutrum augue. Fusce maximus pellentesque congue. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Maecenas lectus orci, bibendum vel faucibus id, interdum vel nulla. Nunc ac erat id magna porttitor vehicula. Aliquam congue, leo eget semper pretium, turpis tellus dapibus mauris, id euismod enim orci non massa. Vivamus consectetur iaculis elit vitae elementum. In at feugiat risus, a convallis lorem.
+      </p>
     </article>
 
     <article class='blog-post'>
-      <h2>Blog Post</h2>
-      <p>chỉ đơn giản là một đoạn văn bản giả, được dùng vào việc trình bày và dàn trang phục vụ cho in ấn. Lorem Ipsum đã được sử dụng như một văn bản chuẩn cho ngành công nghiệp in ấn từ những năm 1500, khi một họa sĩ vô danh ghép nhiều đoạn văn bản với nhau để tạo thành một bản mẫu văn bản. Đoạn văn bản này không những đã tồn tại năm thế kỉ, mà khi được áp dụng vào tin học văn phòng, nội dung của nó vẫn không hề bị thay đổi. Nó đã được phổ biến trong những năm 1960 nhờ việc bán những bản giấy Letraset in những đoạn Lorem Ipsum, và gần đây hơn, được sử dụng trong các ứng dụng dàn trang, như Aldus PageMaker</p>
+      <h2 class='blog-post-title'>Blog Post</h2>
+      <p class='blog-post-content'>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas neque sapien, mattis at leo quis, tincidunt venenatis dui. Curabitur vitae finibus leo. Ut laoreet elit ante. Aliquam ut nisi id sapien porta rhoncus vitae rutrum augue. Fusce maximus pellentesque congue. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Maecenas lectus orci, bibendum vel faucibus id, interdum vel nulla. Nunc ac erat id magna porttitor vehicula. Aliquam congue, leo eget semper pretium, turpis tellus dapibus mauris, id euismod enim orci non massa. Vivamus consectetur iaculis elit vitae elementum. In at feugiat risus, a convallis lorem.
+      </p>
       <img class="blog-image" src='http://65.media.tumblr.com/4eb5a08d93db30e10b7ac041d6989749/tumblr_o7wm7qWR3W1sz1s2jo1_1280.jpg'>
-      <p>chỉ đơn giản là một đoạn văn bản giả, được dùng vào việc trình bày và dàn trang phục vụ cho in ấn. Lorem Ipsum đã được sử dụng như một văn bản chuẩn cho ngành công nghiệp in ấn từ những năm 1500, khi một họa sĩ vô danh ghép nhiều đoạn văn bản với nhau để tạo thành một bản mẫu văn bản. Đoạn văn bản này không những đã tồn tại năm thế kỉ, mà khi được áp dụng vào tin học văn phòng, nội dung của nó vẫn không hề bị thay đổi. Nó đã được phổ biến trong những năm 1960 nhờ việc bán những bản giấy Letraset in những đoạn Lorem Ipsum, và gần đây hơn, được sử dụng trong các ứng dụng dàn trang, như Aldus PageMaker</p>
+      <p class='blog-post-content'>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas neque sapien, mattis at leo quis, tincidunt venenatis dui. Curabitur vitae finibus leo. Ut laoreet elit ante. Aliquam ut nisi id sapien porta rhoncus vitae rutrum augue. Fusce maximus pellentesque congue. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Maecenas lectus orci, bibendum vel faucibus id, interdum vel nulla. Nunc ac erat id magna porttitor vehicula. Aliquam congue, leo eget semper pretium, turpis tellus dapibus mauris, id euismod enim orci non massa. Vivamus consectetur iaculis elit vitae elementum. In at feugiat risus, a convallis lorem.
+      </p>
     </article>
 
     <footer class='foot'>
