add meta viewport tags

--- a/src/blog.html
+++ b/src/blog.html
@@ -6,6 +6,7 @@
     <link rel='stylesheet' href='../src/css/grid.css' type="text/css">
     <link rel='stylesheet' href='../src/css/main.css' type="text/css">
     <link rel='stylesheet' href='../src/css/blog.css' type="text/css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
   </head>
   <body>
