--- a/index.html
+++ b/index.html
@@ -10,16 +10,20 @@
 
   </head>
   <body>
+    <header>
+    <h1>John Whiles</h1>
+    </header>
+
     <nav class='nav-bar clicked'>
       <ul id='nav-list' class='nav-list'>
         <li class='nav-item clicked'><a class='nav-list-link home' href='index.html'>Home</a></li>
         <li class='nav-item clicked'><a class='nav-list-link' href='src/blog.html'>Blog</a></li>
+        <li class='nav-item clicked'><a class='nav-list-link' href='src/blog.html'>Clog</a></li>
+
         <li  class='icon clicked'><a id='icon' class='nav-list-link icon'>&#9776;</a></li>
       </ul>
     </nav>
-    <header>
-    <h1>John Whiles</h1>
-    </header>
+
     <section class='about'>
       <h2 class='section-title'>About</h2>
       <p class='about-contents'>
