adds a real blog post

--- a/src/blog.html
+++ b/src/blog.html
@@ -22,24 +22,19 @@
     </header>
 
     <article class='blog-post'>
-      <h2 class='blog-post-title'>Blog Post</h2>
+      <h2 class='blog-post-title'>Things you could do with APIs</h2>
       <p class='blog-post-content'>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas neque sapien, mattis at leo quis, tincidunt venenatis dui. Curabitur vitae finibus leo. Ut laoreet elit ante. Aliquam ut nisi id sapien porta rhoncus vitae rutrum augue. Fusce maximus pellentesque congue. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Maecenas lectus orci, bibendum vel faucibus id, interdum vel nulla. Nunc ac erat id magna porttitor vehicula. Aliquam congue, leo eget semper pretium, turpis tellus dapibus mauris, id euismod enim orci non massa. Vivamus consectetur iaculis elit vitae elementum. In at feugiat risus, a convallis lorem.
+        <strong>Rudimentary mind control</strong> - Scrape youtube comments then filter them by their emotional content using a sentiment analysis API. These comments could then be read to the user, whose mood should shift to match the sentiments expressed.
+        <br>
+        <br>
+        <strong>Backwords</strong> - Gather random words, using a random word API. Find the longest possible word that could be made with the letters of said word, excluding the original word. Present this second shorter word to the user, who then must attempt to intuit the original longer word.
+        <br>
+        <br>
+        <strong>Auto Dadactic</strong> - Feed any image into Microsoft's Computer Vision API. Appreciate the procedurally generated surrealist poetry that will be returned.
       </p>
       <img class="blog-image" src='http://65.media.tumblr.com/4eb5a08d93db30e10b7ac041d6989749/tumblr_o7wm7qWR3W1sz1s2jo1_1280.jpg'>
       <p class='blog-post-content'>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas neque sapien, mattis at leo quis, tincidunt venenatis dui. Curabitur vitae finibus leo. Ut laoreet elit ante. Aliquam ut nisi id sapien porta rhoncus vitae rutrum augue. Fusce maximus pellentesque congue. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Maecenas lectus orci, bibendum vel faucibus id, interdum vel nulla. Nunc ac erat id magna porttitor vehicula. Aliquam congue, leo eget semper pretium, turpis tellus dapibus mauris, id euismod enim orci non massa. Vivamus consectetur iaculis elit vitae elementum. In at feugiat risus, a convallis lorem.
-      </p>
-    </article>
-
-    <article class='blog-post'>
-      <h2 class='blog-post-title'>Blog Post</h2>
-      <p class='blog-post-content'>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas neque sapien, mattis at leo quis, tincidunt venenatis dui. Curabitur vitae finibus leo. Ut laoreet elit ante. Aliquam ut nisi id sapien porta rhoncus vitae rutrum augue. Fusce maximus pellentesque congue. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Maecenas lectus orci, bibendum vel faucibus id, interdum vel nulla. Nunc ac erat id magna porttitor vehicula. Aliquam congue, leo eget semper pretium, turpis tellus dapibus mauris, id euismod enim orci non massa. Vivamus consectetur iaculis elit vitae elementum. In at feugiat risus, a convallis lorem.
-      </p>
-      <img class="blog-image" src='http://65.media.tumblr.com/4eb5a08d93db30e10b7ac041d6989749/tumblr_o7wm7qWR3W1sz1s2jo1_1280.jpg'>
-      <p class='blog-post-content'>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas neque sapien, mattis at leo quis, tincidunt venenatis dui. Curabitur vitae finibus leo. Ut laoreet elit ante. Aliquam ut nisi id sapien porta rhoncus vitae rutrum augue. Fusce maximus pellentesque congue. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Maecenas lectus orci, bibendum vel faucibus id, interdum vel nulla. Nunc ac erat id magna porttitor vehicula. Aliquam congue, leo eget semper pretium, turpis tellus dapibus mauris, id euismod enim orci non massa. Vivamus consectetur iaculis elit vitae elementum. In at feugiat risus, a convallis lorem.
+        <time>8:32pm 03-11-2016</time>
       </p>
     </article>
 
