--- a/index.html
+++ b/index.html
@@ -29,15 +29,16 @@
     <section class='portfolio'>
       <h2 class='section-title'>My Projects</h2>
       <div class='col-4'>
-        <h3>yo</h3>
-        <img class='portfolio-image' src='http://f4.bcbits.com/img/a2832880625_16.jpg'>
-
-      </a>
+        <a href='https://jwhiles.github.io/calculator/'>
+          <h3>Calculator</h3>
+          <img class='portfolio-image' src='src/images/calculator.png'>
+        </a>
       </div>
       <div class='col-4'>
-        <h3>yo</h3>
-        <img class='portfolio-image' src='http://f4.bcbits.com/img/a2537487312_16.jpg'>
-
+        <a href="https://jwhiles.github.io/stop-watch-1/">
+          <h3>Stopwatch</h3>
+          <img class='portfolio-image' src='src/images/stop-watch.png'>
+        </a>
       </div>
       <div class='col-4'>
         <h3>yo</h3>
