improve front page

--- a/index.html
+++ b/index.html
@@ -18,17 +18,12 @@
       <ul id='nav-list' class='nav-list'>
         <li class='nav-item clicked'><a class='nav-list-link home' href='index.html'>Home</a></li>
         <li class='nav-item clicked'><a class='nav-list-link' href='src/blog.html'>Blog</a></li>
-        <li class='nav-item clicked'><a class='nav-list-link' href='src/blog.html'>Clog</a></li>
 
         <li  class='icon clicked'><a id='icon' class='nav-list-link icon'>&#9776;</a></li>
       </ul>
     </nav>
 
-    <section class='about'>
-      <h2 class='section-title'>About</h2>
-      <p class='about-contents'>
-        John, I am John Whiles. I am I am
-      </p>
+    
     </section>
     <section class='portfolio'>
       <h2 class='section-title'>My Projects</h2>
@@ -61,8 +56,11 @@
 
     </section>
     <footer class='foot'>
-      <h2>contact me<h2>
+      <h2>Contact me<h2>
         <a class='contact-link' href='https://uk.linkedin.com/in/john-whiles-362461100'>LinkedIn</a>
+        <a class='contact-link' href='https://twitter.com/smallergiraffes'>Twitter</a>
+
+
     </footer>
 
   <script src='src/js/menu-button.js'></script>
