--- a/src/blog.html
+++ b/src/blog.html
@@ -10,16 +10,19 @@
 
   </head>
   <body>
-    <nav class='nav-bar clicked'>
-      <ul id='nav-list' class='nav-list'>
-        <li class='nav-item clicked'><a class='nav-list-link home' href='../index.html'>Home</a></li>
-        <li class='nav-item clicked'><a class='nav-list-link' href='blog.html'>Blog</a></li>
-        <li  class='icon clicked'><a id='icon' class='nav-list-link icon'>&#9776;</a></li>
-      </ul>
-    </nav>
+  
     <header>
     <h1>Blog</h1>
     </header>
+
+    <nav class='nav-bar clicked'>
+      <ul id='nav-list' class='nav-list'>
+        <li class='nav-item clicked'><a class='nav-list-link home' href='index.html'>Home</a></li>
+        <li class='nav-item clicked'><a class='nav-list-link' href='src/blog.html'>Blog</a></li>
+
+        <li  class='icon clicked'><a id='icon' class='nav-list-link icon'>&#9776;</a></li>
+      </ul>
+    </nav>
 
     <article class='blog-post'>
       <h2 class='blog-post-title'>Things you could do with APIs</h2>
