fix blog contacts

--- a/src/blog.html
+++ b/src/blog.html
@@ -10,15 +10,15 @@
 
   </head>
   <body>
-  
+
     <header>
     <h1>Blog</h1>
     </header>
 
     <nav class='nav-bar clicked'>
       <ul id='nav-list' class='nav-list'>
-        <li class='nav-item clicked'><a class='nav-list-link home' href='index.html'>Home</a></li>
-        <li class='nav-item clicked'><a class='nav-list-link' href='src/blog.html'>Blog</a></li>
+        <li class='nav-item clicked'><a class='nav-list-link home' href='../index.html'>Home</a></li>
+        <li class='nav-item clicked'><a class='nav-list-link' href='../src/blog.html'>Blog</a></li>
 
         <li  class='icon clicked'><a id='icon' class='nav-list-link icon'>&#9776;</a></li>
       </ul>
@@ -42,9 +42,11 @@
     </article>
 
     <footer class='foot'>
-      <h2>contact me<h2>
+      <h2>Contact me<h2>
         <a class='contact-link' href='https://uk.linkedin.com/in/john-whiles-362461100'>LinkedIn</a>
+        <a class='contact-link' href='https://twitter.com/smallergiraffes'>Twitter</a>
     </footer>
+
 
   <script src='../src/js/menu-button.js'></script>
   </body>
