--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </ul>
     </nav>
 
-    
+
     </section>
     <section class='portfolio'>
       <h2 class='section-title'>My Projects</h2>
@@ -40,9 +40,10 @@
         </a>
       </div>
       <div class='col-4'>
-        <h3>yo</h3>
-        <img class='portfolio-image' src='http://f4.bcbits.com/img/a2797711040_16.jpg'>
-
+        <a href='http://johnwhiles.bandcamp.com/album/the-second-christmas-another-winters-evening-with-john-whiles-were-our-hearts-ever-so-cold'>
+          <h3>My Christmas album</h3>
+          <img class='portfolio-image' src='http://f4.bcbits.com/img/a2797711040_16.jpg'>
+        </a>
       </div>
 
       <div class='col-6'>
@@ -55,12 +56,11 @@
       </div>
 
     </section>
+
     <footer class='foot'>
       <h2>Contact me<h2>
         <a class='contact-link' href='https://uk.linkedin.com/in/john-whiles-362461100'>LinkedIn</a>
         <a class='contact-link' href='https://twitter.com/smallergiraffes'>Twitter</a>
-
-
     </footer>
 
   <script src='src/js/menu-button.js'></script>
