updates front page content

--- a/index.html
+++ b/index.html
@@ -47,8 +47,10 @@
       </div>
 
       <div class='col-6'>
-        <h3>Something</h3>
-        <img class='portfolio-image' src='http://f4.bcbits.com/img/a2537487312_16.jpg'>
+        <a href='http://johnwhiles.tumblr.com/'>
+          <h3>Photography</h3>
+          <img class='portfolio-image' src='http://f4.bcbits.com/img/a2537487312_16.jpg'>
+        </a>
       </div>
       <div class='col-6'>
         <h3>Something Else</h3>
@@ -60,7 +62,7 @@
     <footer class='foot'>
       <h2>Contact me<h2>
         <a class='contact-link' href='https://uk.linkedin.com/in/john-whiles-362461100'>LinkedIn</a>
-        <a class='contact-link' href='https://twitter.com/smallergiraffes'>Twitter</a>
+        <a class='contact-link' href='https://github.com/Jwhiles'>Github</a>
     </footer>
 
   <script src='src/js/menu-button.js'></script>
