--- a/src/blog.html
+++ b/src/blog.html
@@ -27,6 +27,9 @@
     <article class='blog-post'>
       <h2 class='blog-post-title'>Things you could do with APIs</h2>
       <p class='blog-post-content'>
+        <time>8:32pm 03-11-2016</time>
+      </p>
+      <p class='blog-post-content'>
         <strong>Rudimentary mind control</strong> - Scrape youtube comments then filter them by their emotional content using a sentiment analysis API. These comments could then be read to the user, whose mood should shift to match the sentiments expressed.
         <br>
         <br>
@@ -36,15 +39,13 @@
         <strong>Auto Dadactic</strong> - Feed any image into Microsoft's Computer Vision API. Appreciate the procedurally generated surrealist poetry that will be returned.
       </p>
       <img class="blog-image" src='http://65.media.tumblr.com/4eb5a08d93db30e10b7ac041d6989749/tumblr_o7wm7qWR3W1sz1s2jo1_1280.jpg'>
-      <p class='blog-post-content'>
-        <time>8:32pm 03-11-2016</time>
-      </p>
+
     </article>
 
     <footer class='foot'>
       <h2>Contact me<h2>
         <a class='contact-link' href='https://uk.linkedin.com/in/john-whiles-362461100'>LinkedIn</a>
-        <a class='contact-link' href='https://twitter.com/smallergiraffes'>Twitter</a>
+        <a class='contact-link' href='https://github.com/Jwhiles'>Github</a>
     </footer>
 
 
