--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     </section>
     <section class='portfolio'>
-      <h2 class='section-title'>My Projects</h2>
+      <h2 class='section-title'>Projects</h2>
       <div class='col-4'>
         <a href='https://jwhiles.github.io/calculator/'>
           <h3>Calculator</h3>
