transfer things to hapi, errors remain

--- a/src/pages/blog.html
+++ b/src/pages/blog.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>John Whiles</title>
-    <link rel='stylesheet' href='../src/css/grid.css' type="text/css">
-    <link rel='stylesheet' href='../src/css/main.css' type="text/css">
-    <link rel='stylesheet' href='../src/css/blog.css' type="text/css">
+    <link rel='stylesheet' href='src/css/grid.css' type="text/css">
+    <link rel='stylesheet' href='src/css/main.css' type="text/css">
+    <link rel='stylesheet' href='src/css/blog.css' type="text/css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
   </head>
@@ -17,8 +17,8 @@
 
     <nav class='nav-bar clicked'>
       <ul id='nav-list' class='nav-list'>
-        <li class='nav-item clicked'><a class='nav-list-link home' href='../index.html'>Home</a></li>
-        <li class='nav-item clicked'><a class='nav-list-link' href='../src/blog.html'>Blog</a></li>
+        <li class='nav-item clicked'><a class='nav-list-link home' href='src/pages/index.html'>Home</a></li>
+        <li class='nav-item clicked'><a class='nav-list-link' href='src/pages/blog.html'>Blog</a></li>
 
         <li  class='icon clicked'><a id='icon' class='nav-list-link icon'>&#9776;</a></li>
       </ul>
@@ -44,7 +44,7 @@
         <br>
         <br>
 
-        <img src='../src/images/example1.png'>
+        <img src='src/images/example1.png'>
         <br>
         <br>
 
@@ -52,7 +52,7 @@
         <br>
         <br>
 
-        <img src='../src/images/example2.png'>
+        <img src='src/images/example2.png'>
         <br>
         <br>
 
@@ -95,6 +95,6 @@
     </footer>
 
 
-  <script src='../src/js/menu-button.js'></script>
+  <script src='src/js/menu-button.js'></script>
   </body>
 </html>
