--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -16,8 +16,8 @@
 
     <nav class='nav-bar clicked'>
       <ul id='nav-list' class='nav-list'>
-        <li class='nav-item clicked'><a class='nav-list-link home' href='index.html'>Home</a></li>
-        <li class='nav-item clicked'><a class='nav-list-link' href='src/blog.html'>Blog</a></li>
+        <li class='nav-item clicked'><a class='nav-list-link home' href='src/pages/index.html'>Home</a></li>
+        <li class='nav-item clicked'><a class='nav-list-link' href='src/pages/blog.html'>Blog</a></li>
 
         <li  class='icon clicked'><a id='icon' class='nav-list-link icon'>&#9776;</a></li>
       </ul>
