--- a/src/grid.html
+++ b/src/grid.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width">
   </head>
   <body>
+    <header>
+    <h1>DRAW</h1>
+    </header>
     <div class='main'>
       <div class='col'>
         <button class='point'></button>
